// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Should have background color='primary' when color='primary' prop exists 1`] = `
.c0 {
  width: 100%;
  height: 56px;
  border: none;
  border-radius: 12px;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #fff;
  font-size: 14px;
  font-family: "NunitoSans-700","sans-serif";
  color: #fff;
  background-color: #E82223;
}

<button
  className="c0"
  color="primary"
/>
`;

exports[`<Button /> Should render a disabled button 1`] = `
.c0 {
  width: 100%;
  height: 56px;
  border: none;
  border-radius: 12px;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #fff;
  font-size: 14px;
  font-family: "NunitoSans-700","sans-serif";
  cursor: default;
  background-color: #BBC3CF;
  color: #fff;
}

<button
  class="c0"
  disabled=""
>
  Disabled
</button>
`;

exports[`<Button /> Should render correctly 1`] = `
.c0 {
  width: 100%;
  height: 56px;
  border: none;
  border-radius: 12px;
  outline: none;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: #fff;
  font-size: 14px;
  font-family: "NunitoSans-700","sans-serif";
}

<button
  className="c0"
/>
`;
